<resources>
    <string name="app_name">AppRecipes</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_search_local">Search Saved</string>
    <string name="title_search_online">Search Online</string>
    <string name="title_settings">Settings</string>
    <string name="search_your_saved_recipes">Search your saved recipes</string>
    <string name="search_recipes_online">Search recipes online</string>
    <string name="ingredients_label">Ingredients:</string>
    <string name="instructions_label">Instructions:</string>
    <string name="recipe_image">Recipe image</string>
    <string name="add_new_recipe">Add new recipe</string>
    <string name="add_picture">Add picture</string>
    <string name="recipe_name">Recipe name</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="go_back">Go back</string>
    <string name="category_used_as_filter">Category (used as filter)</string>
    <string name="new_recipe_added_success">New recipe successfully added!</string>
    <string name="error_add_recipe">Error! You must at least input a name and instructions for the recipe!</string>
    <string name="no_category">No category</string>
    <string name="delete_recipe">Delete recipe</string>
    <string name="recipe">Recipe</string>
    <string name="recipe_deleted_success">Recipe deleted!</string>
    <string name="save_recipe_to_device">Save recipe to device</string>
    <string name="search_is_empty">Search query is empty!</string>
    <string name="picture_added_success">Picture added!</string>
    <string name="recipe_download_success">Recipe successfully downloaded!</string>
    <string name="edit_recipe">Edit recipe</string>
    <string name="connection_error">There seems to be connection error, check your internet connection</string>
    <string name="no_response_from_api">No response from API service</string>
    <string name="add_new_picture">Add new picture</string>
    <string name="save">Save</string>
    <string name="recipe_edit_success">Recipe edited!</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="user_settings">User settings</string>
    <string name="search_settings">Search settings</string>
    <string name="share_recipe">Share recipe</string>
    <string name="sharing_my_recipe">Sharing my recipe!</string>
</resources>