<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".searchlocal.RecipeDetailFragment">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="160dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/recipe_image" />

        <TextView
            android:id="@+id/recipe_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:text="Recipe Name" />

        <TextView
            android:id="@+id/ingredients_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/ingredients_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="@+id/recipe_name"
            app:layout_constraintTop_toBottomOf="@+id/recipe_name" />

        <TextView
            android:id="@+id/ingredients_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/ingredients_label"
            app:layout_constraintTop_toBottomOf="@+id/ingredients_label"
            android:maxWidth="360dp"
            tools:text="Item 1\nItem 2\nItem 3\nItem 4\n" />

        <TextView
            android:id="@+id/instructions_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="@+id/ingredients_text"
            app:layout_constraintTop_toBottomOf="@+id/ingredients_text" />

        <TextView
            android:id="@+id/instructions_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/instructions_label"
            app:layout_constraintTop_toBottomOf="@+id/instructions_label"
            android:maxWidth="360dp"
            tools:text="I found this pancake recipe in my Grandma's recipe book. Judging from the weathered look of this recipe card, this was a family favorite." />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

